app-deployment.yaml
# app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dep
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
  template:
    metadata:
      labels:
        tier: backend
    spec:
      containers:
      - name: backend
        image: busybox
        command: ["sh", "-c", "while true; do echo -e 'HTTP/1.1 200 OK\r\n\r\nhello from backend' | nc -l -p 8080; done"]
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: app
spec:
  selector:
    tier: backend
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
