data-deployment.yaml
# data-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-dep
  namespace: data
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: database
  template:
    metadata:
      labels:
        tier: database
    spec:
      containers:
      - name: postgres
        image: postgres:14-alpine
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: data-svc
  namespace: data
spec:
  selector:
    tier: database
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
