web-deployment.yaml
# web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dep
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels:
        tier: frontend
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: web
spec:
  selector:
    tier: frontend
  ports:
  - port: 80
    targetPort: 80
  type: NodePort # Permite el acceso externo (simulación de Internet)
